# WhoDisPokemon

./: .pre-commit-config.yaml  README.md  audio.py  aws.py  main.py  requirements-dev.txt  requirements.txt  setup.cfg
WhoDisPokemon/: alternatives.py  audio.py  aws.py  main.py  pokelog.txt
