[metadata]
name = WhoDisPokemon
description = Generates a "Who's that Pokemon"-Style Question and answer Video 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/darkshoxx/WhoDisPokemon
author = darkshoxx
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = True
platforms = windos, linux
python_reqires = >= 3.7
zip_safe = True

[options.extras_require]
testing =
    coverage
    pytest
    pytest-mock
